tests/diagnostic_golden/semantic_unknown_specific_procedure.f90
program p
  interface assignment(=)
    procedure missing_proc
  end interface
end program p
